tests/compiler_errors/reserve_non_end_finish.tlp
reserve foo 1000 int